fixed input modes to return List<String> rather than List<Flashcard>